--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,6 @@
-title:            Balzac
+title:            Impossible Maps FA17
 tagline:          A beautiful theme.
 description:      Describe your website.
-canonical: http://jekyll.gtat.me
 
 # Owner/author information
 owner:
@@ -9,12 +8,7 @@ owner:
   avatar:         avatar.png
   bio:            "Aesthete & Athlete"
   email:          cole@coletownsend.com
-  twitter:        twnsndco
   github:         coletownsend
-  instagram:      ctrunsthis
-  dribbble:       coletownsend
-  disqus:         balzac
-  location:       "Buffalo, NY"
   # Plug in your disqus shortname!
 
 tools:
@@ -30,12 +24,6 @@ opengraph:
 links:
   - title: About
     url: /about
-  - title: Github
-    url: https://github.com/ColeTownsend/Balzac-for-Jekyll
-    external: true
-  - title: Cole Who?
-    url: http://coletownsend.com
-    external: true
 
 # http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 timezone:    America/New_York
